--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -3,30 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cherry.alok.myapplication.OrderActivity"
     android:orientation="vertical"
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="5dp"
-        android:text="Ongoing Request Details"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat"
-        android:textSize="20sp"
-        android:shadowColor="#ffccff"
-        android:shadowRadius="1.5"
-        android:shadowDx="1"
-        android:shadowDy="1"/>
     <!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_request_details"
@@ -388,7 +371,7 @@
                 style="@style/TextViewStyleXSmall2"
                 android:layout_gravity="left"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin" />
+                android:layout_marginTop="8dp" />
 
             <View
                 android:id="@+id/line_recipient"
@@ -439,7 +422,7 @@
                 style="@style/TextViewStyleXSmall2"
                 android:layout_gravity="left"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin" />
+                />
 
             <View
                 android:id="@+id/line_transaction"
@@ -487,61 +470,107 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="20dp"
-        android:text="Ongoing Request Status"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat"
-        android:textSize="20sp"
-        android:shadowColor="#ffccff"
-        android:shadowRadius="1.5"
-        android:shadowDx="1"
-        android:shadowDy="1"/>
-
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_request_status"
-        android:layout_width="match_parent"
-        android:layout_height="91dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="5dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:orientation="vertical"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="4dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp"
+            android:baselineAligned="false">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.3"
+                            >
+                            <ProgressBar
+                                android:id="@+id/firstBar"
+                                style="?android:attr/progressBarStyleHorizontal"
+                                android:layout_gravity="right"
 
-            <TextView
-                android:id="@+id/current_status_text"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="20dp"
-                android:text="Picked Up"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                android:textSize="20sp"
-                android:shadowColor="#ffffff"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:layout_weight="0.7"/>
+                                android:layout_height="200dp"
+                                android:layout_width="200dp"
+                                android:progressDrawable="@drawable/progressbar_states">
+
+
+                            </ProgressBar>
+                        </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="200dp"
+                                android:orientation="vertical"
+                                android:layout_weight="0.7"
+                                >
+
+                                <TextView
+
+                                    style="@style/TextViewStyleReviewValueSmall"
+                                    android:text="Request Completed"
+                                    android:layout_height="25dp"
+                                    />
+                                <TextView
+
+                                    style="@style/TextViewStyleReviewValueSmall"
+                                    android:text="Vehicle On Way back"
+                                    android:layout_height="25dp"
+                                    />
+                                <TextView
+
+                                    style="@style/TextViewStyleReviewValueSmall"
+                                    android:text="Vehicle Servicing Start"
+                                    android:layout_height="25dp"
+                                    />
+                                <TextView
+
+                                    style="@style/TextViewStyleReviewValueSmall"
+                                    android:text="Vehicle At Garage"
+                                    android:layout_height="25dp"
+                                    />
+                                <TextView
+
+                                    style="@style/TextViewStyleReviewValueSmall"
+                                    android:text="Vehicle Picked Up"
+                                    android:layout_height="25dp"
+                                    />
+                                <TextView
+
+                                    style="@style/TextViewStyleReviewValueSmall"
+                                    android:text="Driver OnWay to Garage"
+                                    android:layout_height="25dp"
+                                    />
+                                <TextView
+
+                                    style="@style/TextViewStyleReviewValueSmall"
+                                    android:text="Driver Allocated"
+                                    android:layout_height="25dp"
+
+                                    />
+                                <TextView
+
+                                    style="@style/TextViewStyleReviewValueSmall"
+                                    android:text="Request Placed"
+                                    android:layout_height="25dp"
+                                    android:layout_gravity="bottom"
+                                    />
+
+
+                            </LinearLayout>
+
+
+
+
+
+
+
+
 
         </LinearLayout>
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/querystatus_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/refresh1" />
-        </android.support.v7.widget.CardView>
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/querystatus_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/refresh1" />
 
 </LinearLayout>
