--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-
+    <dimen name="scrollviw_activity_horizontal_margin">4dp</dimen>
 
     <dimen name="fab_elevation">8dp</dimen>
     <dimen name="fab_elevation_press">12dp</dimen>
