--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,21 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
+        <item name="android:buttonStyle">@style/RobotoButtonStyle</item>
+
+    </style>
+    <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">sans-serif-condensed</item>
+    </style>
+    <style name="RobotoSpinnerStyle" parent="android:Widget.Spinner">
+        <item name="android:fontFamily">sans-serif-condensed</item>
+    </style>
+    <style name="RobotoSpinnerDDStyle" parent="android:Widget.Spinner.DropDown">
+        <item name="android:fontFamily">sans-serif-condensed</item>
+    </style>
+    <style name="RobotoButtonStyle" parent="android:Widget.Holo.Button">
+        <item name="android:fontFamily">sans-serif-condensed</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -134,6 +149,16 @@
         <item name="android:textSize">18sp</item>
         <item name="android:gravity">right</item>
     </style>
+
+    <style name="TextViewStyleReviewValueSmall">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">@style/TextAppearance4</item>
+        <item name="android:singleLine">false</item>
+        <item name="android:textColor">#606060</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:gravity">right</item>
+    </style>
     <style name="TextAppearance4">
         <item name="android:textColor">#000000</item>
         <item name="android:textStyle">normal</item>
@@ -142,8 +167,8 @@
     <style name="ScrollViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
-        <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
+        <item name="android:paddingTop">@dimen/scrollviw_activity_horizontal_margin</item>
+        <item name="android:paddingBottom">@dimen/scrollviw_activity_horizontal_margin</item>
     </style>
 
     <style name="LinearLayoutStyleHorizontalReview">
