--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,300 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.cherry.alok.myapplication.OrderActivity"
+    tools:showIn="@layout/order_parent"
+    android:id="@+id/scroll"
+    android:scrollbars="vertical|horizontal">
+
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_request_details"
-        android:layout_width="match_parent"
-        android:layout_height="145dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="5dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:orientation="vertical"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="4dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:orientation="vertical"
-                            android:layout_weight="0.5"
-                           >
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_marginTop="5dp">
-                                            <TextView
-                                                android:layout_height="wrap_content"
-                                                android:layout_width="wrap_content"
-                                                android:text="  Service Type"
-                                                android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                                                android:textSize="14sp"
-                                                android:shadowColor="#00ccff"
-                                                android:shadowRadius="1.0"
-                                                android:shadowDx="0.5"
-                                                android:shadowDy="0.5"
-                                                android:singleLine="true" />
-
-
-                            </LinearLayout>
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_marginTop="5dp">
-                                <TextView
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="wrap_content"
-                                    android:text="  Car Registered No"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                                    android:textSize="14sp"
-                                    android:shadowColor="#00ccff"
-                                    android:shadowRadius="1.0"
-                                    android:shadowDx="0.5"
-                                    android:shadowDy="0.5"
-                                    />
-
-
-                            </LinearLayout>
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_marginTop="5dp">
-                                <TextView
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="wrap_content"
-                                    android:text="  Car Model"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                                    android:textSize="14sp"
-                                    android:shadowColor="#00ccff"
-                                    android:shadowRadius="1.0"
-                                    android:shadowDx="0.5"
-                                    android:shadowDy="0.5" />
-
-
-                            </LinearLayout>
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_marginTop="5dp">
-                                <TextView
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="wrap_content"
-                                    android:text="  Date Of Order"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                                    android:textSize="14sp"
-                                    android:shadowColor="#00ccff"
-                                    android:shadowRadius="1.0"
-                                    android:shadowDx="0.5"
-                                    android:shadowDy="0.5"
-                                    />
-
-
-                            </LinearLayout>
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_marginTop="5dp">
-                                <TextView
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="wrap_content"
-                                    android:text="  Pick Up slot"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                                    android:textSize="14sp"
-                                    android:shadowColor="#00ccff"
-                                    android:shadowRadius="1.0"
-                                    android:shadowDx="0.5"
-                                    android:shadowDy="0.5"
-                                    />
-                            </LinearLayout>
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:layout_marginTop="5dp">
-                                    <TextView
-                                        android:layout_height="wrap_content"
-                                        android:layout_width="wrap_content"
-                                        android:text="  Driver"
-                                        android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                                        android:textSize="14sp"
-                                        android:shadowColor="#00ccff"
-                                        android:shadowRadius="1.0"
-                                        android:shadowDx="0.5"
-                                        android:shadowDy="0.5"
-                                        />
-
-
-                            </LinearLayout>
-
-
-                        </LinearLayout>
-
-
-
-
-                        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:orientation="vertical"
-                            android:layout_marginRight="5dp"
-                            android:layout_weight="0.5"
-                            >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
-
-                    <TextView
-                        android:id="@+id/service_type"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                        android:textSize="14sp"
-                        android:shadowColor="#00ccff"
-                        android:shadowRadius="1.5"
-                        android:shadowDx="1"
-                        android:shadowDy="1"
-                        android:text=""
-                        android:textAlignment="viewStart"
-                        android:layout_weight="0.3"/>
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
-
-                    <TextView
-                        android:id="@+id/car_reg_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                        android:textSize="14sp"
-                        android:shadowColor="#00ccff"
-                        android:shadowRadius="1.5"
-                        android:shadowDx="1"
-                        android:shadowDy="1"
-                        android:text=""
-                        android:textAlignment="textEnd"
-                        />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
-
-                    <TextView
-                        android:id="@+id/car_model_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                        android:textSize="14sp"
-                        android:shadowColor="#00ccff"
-                        android:shadowRadius="1.5"
-                        android:shadowDx="1"
-                        android:shadowDy="1"
-                        android:text=""
-                        android:textAlignment="textEnd"
-                        />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
-
-                    <TextView
-                        android:id="@+id/req_date_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                        android:textSize="14sp"
-                        android:textAlignment="textEnd"
-                        android:shadowColor="#00ccff"
-                        android:shadowRadius="1.5"
-                        android:shadowDx="1"
-                        android:shadowDy="1"
-                        android:text=""
-                        />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
-
-                    <TextView
-                        android:id="@+id/req_slot_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                        android:textSize="14sp"
-                        android:shadowColor="#00ccff"
-                        android:shadowRadius="1.5"
-                        android:shadowDx="1"
-                        android:shadowDy="1"
-                        android:text=""
-                        />
-
-                </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_marginTop="5dp">
-
-                                <TextView
-                                    android:id="@+id/driver_name_text"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                                    android:textSize="14sp"
-                                    android:shadowColor="#00ccff"
-                                    android:shadowRadius="1.5"
-                                    android:shadowDx="1"
-                                    android:shadowDy="1"
-                                    android:text=""
-                                    />
-
-                            </LinearLayout>
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-        </android.support.v7.widget.CardView>-->
-
-
-    <ScrollView
-        style="@style/ScrollViewStyle"
-        android:isScrollContainer="false"
-         >
-
         <LinearLayout
             style="@style/LinearLayoutStyleVerticalNoPadding"
             android:layout_width="match_parent" >
@@ -468,7 +189,7 @@
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+
 
 
     <LinearLayout
@@ -798,8 +519,21 @@
 
 
         </LinearLayout>
-
-
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/cancel_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="30dp"
+        android:src="@android:drawable/ic_menu_delete"
+       />
 
 </LinearLayout>
+
+
+
+</ScrollView>
