--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,10 @@
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
             android:title="My Garage" />
+        <item
+            android:id="@+id/nav_userrequests"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="My Requests" />
     </group>
 
     <item android:title="Communicate">
