--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -225,6 +225,11 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">16sp</item>
     </style>
+    <style name="TextAppearanceXSmall34">
+        <item name="android:textColor">#ff424242</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">12sp</item>
+    </style>
     <style name="TextAppearanceXVerySmall">
         <item name="android:textColor">#34495E</item>
         <item name="android:textStyle">normal</item>
