--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,8 +26,12 @@
             android:title="My Requests" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Details">
         <menu>
+            <item
+                android:id="@+id/nav_services"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Packages" />
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
