--- a/app/src/main/res/drawable/button_background_normal_blue.xml
+++ b/app/src/main/res/drawable/button_background_normal_blue.xml
@@ -4,14 +4,14 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#86c3e7" />
-            <corners android:radius="3dp" />
-            <stroke android:width="1dp" android:color="#47aae4"/>
+            <corners android:radius="0dp" />
+       <!--     <stroke android:width="1dp" android:color="#47aae4"/>-->
         </shape>
     </item>
     <item android:bottom="7dp">
         <shape android:shape="rectangle">
             <solid android:color="#1181bf" />
-            <corners android:radius="3dp" />
+            <corners android:radius="0dp" />
             <stroke android:width="1dp" android:color="#559bc2" />
         </shape>
     </item>
