--- a/app/src/main/res/layout/content_map.xml
+++ b/app/src/main/res/layout/content_map.xml
@@ -41,7 +41,7 @@
            android:paddingRight="2dp"
            android:elevation="10dp"
            android:layout_marginBottom="50dp"
-           android:text=" Set Pin As PickUp Location ---> "
+           android:text=" Set Pin As PickUp Location"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white" />
