--- a/app/src/main/res/layout/location_small_bottomsheet.xml
+++ b/app/src/main/res/layout/location_small_bottomsheet.xml
@@ -10,30 +10,34 @@
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
 
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:background="#00ffffff"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@android:color/white"
                 android:elevation="2dp"
->
+                android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="0.7">
                     <TextView
-                        android:id="@+id/service_cost_small_btmsheet"
+                        android:id="@+id/location_address_text_btmsheet"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="10dp"
+                        android:textAlignment="center"
+                        android:gravity="center"
                         android:textSize="25sp"
                         android:textStyle="bold"
-                        android:gravity="center"
                         android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"/>
 
                 </LinearLayout>
@@ -42,12 +46,13 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.3">
                     <Button
-                        android:id="@+id/service_select_next"
+                        android:id="@+id/location_select_next"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+
                         android:layout_marginLeft="5dp"
+
                         android:text="Next"
-                        android:enabled="false"
                         android:shadowColor="#00ccff"
                         android:shadowRadius="1.5"
                         android:shadowDx="1"
