--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -138,6 +138,16 @@
         <item name="android:layout_gravity">bottom</item>
     </style>
 
+
+    <style name="ButtonStylePositiveBlue2">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/button_background_blue</item>
+        <item name="android:textAppearance">@style/TextAppearanceButton</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">bottom</item>
+    </style>
     <style name="ButtonStylePositiveFull">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">40dp</item>
@@ -152,7 +162,7 @@
 
 
     <style name="TextAppearanceXSmall3">
-        <item name="android:textColor">#E6E9ED</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">20sp</item>
     </style>
@@ -161,7 +171,7 @@
         <item name="android:singleLine">false</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textAppearance">@style/TextAppearanceXSmall3</item>
-        <item name="android:textColor">#AAB2BD</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:ellipsize">marquee</item>
         <item name="android:paddingLeft">10dp</item>
