--- a/app/src/main/res/layout/services_small_bottomsheet.xml
+++ b/app/src/main/res/layout/services_small_bottomsheet.xml
@@ -25,16 +25,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="0.7">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
                     <TextView
                         android:id="@+id/service_cost_small_btmsheet"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="10dp"
-                        android:textSize="25sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
-                        android:gravity="center"
-                        android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"/>
+                        android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
+                        android:layout_weight="0.5"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.5"
+                            android:id="@+id/services_user_notice"
+                            android:text=""/>
+                    </LinearLayout>
 
                 </LinearLayout>
                 <LinearLayout
