--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -20,6 +20,17 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer" >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true">
+            </Button>
+        </RelativeLayout>
+        </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
