--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -188,6 +188,13 @@
         <item name="android:textColor">#c0c0c0</item>
         <item name="android:textSize">18sp</item>
     </style>
+    <style name="TextViewStyleReviewLabel2">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textAppearance">@style/TextAppearance4</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textColor">#c0c0c0</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 
     <style name="TextViewStyleReviewValue">
         <item name="android:layout_width">wrap_content</item>
@@ -198,6 +205,17 @@
         <item name="android:textSize">18sp</item>
         <item name="android:gravity">right</item>
     </style>
+
+    <style name="TextViewStyleReviewValue3">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textAppearance">@style/TextAppearance4</item>
+        <item name="android:singleLine">false</item>
+        <item name="android:textColor">#606060</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">right</item>
+    </style>
+
+
 
     <style name="TextViewStyleReviewValueSmall">
         <item name="android:layout_width">wrap_content</item>
