--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,7 @@
             android:visible="false"/>
         <item
             android:id="@+id/nav_location"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_placeorder"
             android:title="Place A Wash Request" />
         <item
             android:id="@+id/nav_service_request"
@@ -20,11 +20,11 @@
             android:visible="false"/>
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_menu_mygarage"
             android:title="My Garage" />
         <item
             android:id="@+id/nav_userrequests"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_menu_myrequests"
             android:title="My Requests" />
     </group>
 
@@ -32,12 +32,13 @@
         <menu>
             <item
                 android:id="@+id/nav_services"
-                android:icon="@drawable/ic_menu_manage"
+                android:icon="@drawable/ic_menu_packages"
                 android:title="Packages" />
             <item
                 android:id="@+id/nav_order"
-                android:icon="@drawable/ic_menu_manage"
-                android:title="Ongoing Request" />
+                android:icon="@drawable/ic_menu_ongoing"
+                android:title="Ongoing Request"
+                android:visible="false"/>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
