--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,7 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
     </style>
 
     <style name="ThemeOverlay.MyNoTitleActivity" parent="AppTheme">
@@ -138,7 +139,13 @@
         <item name="android:layout_gravity">bottom</item>
     </style>
 
-
+    <style name="ButtonStylePositiveBlueWithoutHeight">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@drawable/button_background_blue</item>
+        <item name="android:textAppearance">@style/TextAppearanceButton</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:gravity">center</item>
+    </style>
     <style name="ButtonStylePositiveBlue2">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
@@ -322,6 +329,8 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
     </style>
+
+    <style name="Theme.AppTheme.Light.Dialog.NoActionBar" parent="android:Theme.DeviceDefault.Light.Dialog.NoActionBar" />
 
 
 </resources>
