--- a/app/src/main/res/drawable/button_background_disabled_blue.xml
+++ b/app/src/main/res/drawable/button_background_disabled_blue.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- selector xmlns:android="http://schemas.android.com/apk/res/android" -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+<!--    <item>
         <shape android:shape="rectangle">
             <solid android:color="#b7d7ea" />
             <corners android:radius="0dp" />
             <stroke android:width="1dp" android:color="#b7d7ea"/>
         </shape>
-    </item>
-    <item android:bottom="7dp">
+    </item>-->
+    <item android:bottom="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="#b7d7ea" />
+            <solid android:color="@color/color_primary_disabled" />
             <corners android:radius="0dp" />
             <stroke android:width="1dp" android:color="#b7d7ea" />
         </shape>
