--- a/app/src/main/res/drawable/tab_unselected.xml
+++ b/app/src/main/res/drawable/tab_unselected.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#d1c4e9" />
+    <solid android:color="@color/color_primary_disabled" />
 </shape>
