--- a/app/src/main/res/layout/activity_select_slot.xml
+++ b/app/src/main/res/layout/activity_select_slot.xml
@@ -5,9 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="4dp"
+    android:paddingRight="4dp"
     android:paddingTop="8dp"
     android:background="@android:color/white"
     tools:context="com.cherry.alok.myapplication.SelectSlotActivity"
@@ -61,7 +60,7 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="80dp"
             android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/addinst_editText"
@@ -74,9 +73,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:dividerPadding="1dp"
             android:orientation="vertical"
-            android:id="@+id/toplayout">
+            android:id="@+id/toplayout"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="25dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -118,20 +119,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp">
+
                 <Button
                     android:id="@+id/confirm_request"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="4dp"
-                    android:text="REQUEST YOUR SERVICE"
+                    android:layout_height="45dp"
+
+                    android:layout_marginLeft="5dp"
+
+                    android:text="Next"
                     android:shadowColor="#00ccff"
                     android:shadowRadius="1.5"
                     android:shadowDx="1"
                     android:shadowDy="1"
-
-                    style="@style/ButtonStylePositiveBlue"/>
+                    style="@style/ButtonStylePositiveBlue2"
+                    />
             </LinearLayout>
 
 
@@ -217,11 +220,6 @@
 
 
 </ScrollView>
-
-
-
-
-
     <!--include layout="@layout/bottom_sheet_selectslot"
         android:id="@+id/selectslot_bottom_sheet"
         android:elevation="8dp"/-->
